@@ -44,9 +44,11 @@
         <form action="mail_password"
           tal:attributes="action string:${here/portal_url}/account_request_reset_password">
           <dl class="form">
-            <dt><label for="username2"
-                i18n:translate="label_user_name">User name</label></dt>
-            <dd><input type="text" name="username" id="username2" class="focus"/>
+            <dt><label for="username_or_email"
+                i18n:translate="label_user_name_or_email_address">
+                User name or email address</label></dt>
+            <dd><input type="text" name="username_or_email" id="username_or_email"
+                class="focus"/>
             </dd>
           </dl>
           <p class="buttonArea">
