@@ -1,4 +1,4 @@
-##parameters=username, REQUEST
+##parameters=username_or_email, REQUEST
 # $Id$
 """
 Send a password request to the membership tool and display a message telling if
@@ -10,7 +10,7 @@ from Products.CMFCore.utils import getToolByName
 membership_tool = getToolByName(context, 'portal_membership')
 
 try:
-    membership_tool.requestPasswordReset(username)
+    membership_tool.requestPasswordReset(username_or_email)
     REQUEST.RESPONSE.redirect("%s/?portal_status_message=%s" %
                               (context.absolute_url(),
                                'psm_reset_password_request_received'))
