@@ -6,33 +6,58 @@
     <metal:block metal:fill-slot="main"
       tal:define="
       username python:request.get('username');
+      email python:request.get('email');
       request_emission_time python:request.get('d');
       reset_token python:request.get('t');
-      membership_tool here/portal_membership;
+      mtool here/portal_membership;
       valid_reset_token python:
-      membership_tool.isPasswordResetRequestValid(username,
-                                                  request_emission_time,
-                                                  reset_token);
-      "
-      >
+      mtool.isPasswordResetRequestValid(email, request_emission_time,
+      reset_token);
+      ">
       <h1 i18n:translate="heading_validate_password_resetting">
         Validate the resetting of your password</h1>
 
-      <tal:block condition="valid_reset_token">
+      <tal:block condition="valid_reset_token"
+        define="usernames python: username and [username]
+        or mtool.getUsernamesFromEmail(email, request_emission_time, reset_token)
+        ">
         <form action="register" method="post"
           tal:attributes="action string:${here/portal_url}/account_reset_password">
+          <tal:block condition="python:len(usernames) == 1">
+            <p i18n:translate="description_the_account_you_will_reset_password_is">
+              The account below is the one on which the password reset on will be done.
+            </p>
+            <p>
+              <tal:block content="string:${username} / ${email}"/>
+              <input type="hidden" name="usernames:list"
+                tal:attributes="value python:usernames[0]"/>
+            </p>
+          </tal:block>
+          <tal:block condition="python:len(usernames) > 1">
+            <p i18n:translate="description_which_accounts_will_you_reset_password">
+              Specify which account you want to do a password reset on.
+            </p>
+            <tal:block repeat="username usernames">
+              <p tal:define="id string:reset_${username}">
+                <input type="checkbox" name="usernames:list"
+                  tal:attributes="value username; id id"/>
+                <label tal:content="string:${username} / ${email}" tal:attributes="for id"/><br/>
+              </p>
+            </tal:block>
+          </tal:block>
           <p class="buttonArea">
-            <input type="hidden" name="username" value=""
-              tal:attributes="value username"/>
-            <input type="hidden" name="d" value=""
+            <input type="hidden" name="email"
+              tal:attributes="value email"/>
+            <input type="hidden" name="d"
               tal:attributes="value request_emission_time"/>
-            <input type="hidden" name="t" value=""
+            <input type="hidden" name="t"
               tal:attributes="value reset_token"/>
             <input i18n:attributes="value" class="standalone"
               type="submit" name="submit" value="button_reset_password" />
           </p>
         </form>
       </tal:block>
+
       <tal:block condition="not:valid_reset_token">
         <p i18n:translate="help_invalid_reset_password_request">
           Your password reset request is invalid.
