@@ -13,6 +13,9 @@ New features:
 - Supports Boxes *or* Portlets /CPSSkins installation at installation time
 - Made the portal_message macro accept mappings for its translations.
 - #535: Redesign the advanced search form
+- Made the MembershipTool be able to reset password by a user providing a
+  username or an email address. A password reset on many accounts sharing the
+  same email address at the same time is also possible.
 Bug fixes:
 ~~~~~~~~~~
 - fix: the BMP bug (#305) in getImgTag.py
